# redlog_cpp

./: .gitignore  CMakeLists.txt  README.md  meson.build
cmake/: redlogConfig.cmake.in
examples/: CMakeLists.txt  advanced_example.cpp  basic_example.cpp  performance_example.cpp  themes_and_formatting.cpp
include/: redlog.hpp
include/redlog/: redlog.hpp
tests/: CMakeLists.txt  test_main.cpp
